issue/1-1: Create HTML elements

--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+          .divIns { 
+            border-color: #000000; 
+            border-style: solid; 
+            padding: 5px; 
+            width: 10%;
+          }
+    </style>
 </head>
 <body>
+    <p>Insert your tasks:</p>
+    <p><textarea rows="3" cols="35" name="textInsert">Your text</textarea></p>
+    <p style="text-align:left"><button>Add</button></p>
+    <div class="divIns">
+        <h2>Todo:</h2>
+        <p>...</p>
+        <p>...</p>
+        <p>...</p>
+        <p>...</p>
+        <p>...</p>
+        <p>...</p>
+    </div>
     
 </body>
 </html>
