--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             width: 10%;
         }
 
-        #todoListButton {
+        .todoListButton {
             text-align: left;
         }
     </style>
@@ -23,10 +23,10 @@
 <body>
     <p>Insert your tasks:</p>
     <input type="text" id="textInput">
-    <p><button id="todoListButton">Add</button></p>
+    <p><button class="todoListButton" id="todoListButton">Add</button></p>
     <div class="todoListContainer">
         <h2>Todo:</h2>
-        <ul id="listTodo"></ul>
+        <ul id="listOfTodos"></ul>
     </div>
 
     <script src="script.js"></script>
@@ -34,4 +34,3 @@
 </body>
 
 </html>
-
